test/libhyperion/syntaxTests/dataLocations/function_type_array_as_reference_type.hyp
contract C {
    struct Nested { uint y; }
    // ensure that we consider array of function pointers as reference type
    function b(function(Nested memory) external returns (uint)[] storage) internal pure {}
    function c(function(Nested memory) external returns (uint)[] memory) public pure {}
    function d(function(Nested memory) external returns (uint)[] calldata) external pure {}
}
// ----
// TypeError 4888: (134-191): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
